# tyconf

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api_reference.md  best_practices.md  user_guide.md
examples/: advanced_usage.py  basic_usage.py  real_world_app.py  serialization_examples.py  validation_examples.py
src/tyconf/: __init__.py  core.py  validators.py
src/tyconf/serialization/: __init__.py  env.py  json.py  toml.py
tests/: __init__.py  test_core.py  test_serialization.py  test_validators.py
