[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyconf"
version = "1.2.0"
description = "TyConf - Modern Type-safe Configuration for Python 3.13+"
readme = "README.md"
authors = [
    { name = "barabasz", email = "tyconf@anba.ovh" }
]
license = { text = "MIT" }
requires-python = ">=3.13"  # Modern Python only
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "configuration",
    "config",
    "settings",
    "typed",
    "validation",
    "type-safe",
    "serialization",
    "json",
    "toml"
]

# No runtime dependencies!
dependencies = []

[project.optional-dependencies]
# Optional TOML write support
toml = ["tomli-w>=1.0.0"]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",  # Modern linter (faster than flake8)
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/barabasz/tyconf"
Documentation = "https://github.com/barabasz/tyconf/blob/main/docs/user_guide.md"
Repository = "https://github.com/barabasz/tyconf"
Issues = "https://github.com/barabasz/tyconf/issues"
Changelog = "https://github.com/barabasz/tyconf/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short"]