[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyconf"
version = "1.2.0"
description = "TyConf - Modern Type-safe Configuration for Python 3.13+"
readme = "README.md"
authors = [
    { name = "barabasz", email = "tyconf@anba.ovh" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "configuration",
    "config",
    "settings",
    "typed",
    "validation",
    "type-safe",
    "serialization",
    "json",
    "toml"
]

dependencies = []

[project.optional-dependencies]
toml = ["tomli-w>=1.0.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/barabasz/tyconf"
Documentation = "https://github.com/barabasz/tyconf/blob/main/docs/user_guide.md"
Repository = "https://github.com/barabasz/tyconf"
Issues = "https://github.com/barabasz/tyconf/issues"
Changelog = "https://github.com/barabasz/tyconf/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable these rule sets (moved from top-level)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore these rules (moved from top-level)
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["tyconf"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short"]